tests/derive/no_prelude.rs
#![no_implicit_prelude]

#[derive(::hecs::Bundle)]
struct Foo {
    foo: (),
}

fn main() {}
